--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -20208,5 +20208,14 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>After all, the citizens have been thrown out of town by the explosion...</target>
       </segment>
     </unit>
+    <unit id="OXoMte5" name="Du kannst nicht &lt;strong&gt;mehr als 2 Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.">
+      <notes>
+        <note category="german">Du kannst nicht &lt;strong&gt;mehr als 2 Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.</note>
+      </notes>
+      <segment>
+        <source>Du kannst nicht &lt;strong&gt;mehr als 2 Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.</source>
+        <target><![CDATA[Du kannst nicht <strong>mehr als 2 Rationen Wasser pro Tag</strong> entnehmen.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
