--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -20237,5 +20237,14 @@
         <target>Immerhin wurden alle Bürger aus der Stadt geschleudert...</target>
       </segment>
     </unit>
+    <unit id="OXoMte5" name="Du kannst nicht &lt;strong&gt;mehr als 2 Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.">
+      <notes>
+        <note category="german">Du kannst nicht &lt;strong&gt;mehr als 2 Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.</note>
+      </notes>
+      <segment>
+        <source>Du kannst nicht &lt;strong&gt;mehr als 2 Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.</source>
+        <target><![CDATA[Vous ne pouvez pas prendre <strong>plus de 2 rations d'eau par jour</strong>.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
