FR Translation fix for eating a cadaver as a ghoul

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -8834,7 +8834,7 @@
       </notes>
       <segment>
         <source>Nicht so appetitlich wie frisches Menschenfleisch, aber es stillt nichtsdestotrotz deinen Hunger... zumindest ein bisschen. Wenigstens war das Fleisch noch halbwegs zart.</source>
-        <target>Pas aussi appétissante que la chair humaine fraîche, mais elle satisfera toujours votre faim ... au moins un peu. Au moins, la viande était encore raisonnablement tendre.</target>
+        <target>Un corps froid qui n'a même pas eu le temps de pourrir un minimum, c'est vraiment insipide. Votre voracité a pu être un peu calmée, mais vous n'avez rien tiré d'autre de bénéfique de ce "repas".</target>
       </segment>
     </unit>
     <unit id="VMYfBZH">
