--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -20208,7 +20208,7 @@
       </notes>
       <segment>
         <source>Du kannst nicht &lt;strong&gt;mehr als 2 Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.</source>
-        <target><![CDATA[Du kannst nicht <strong>mehr als 2 Rationen Wasser pro Tag</strong> entnehmen.]]></target>
+        <target><![CDATA[No puedes tomar <strong>más de 2 raciones de agua al día</strong>.]]></target>
       </segment>
     </unit>
     <unit id="nOa7S62">
