--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -11569,7 +11569,7 @@
       </notes>
       <segment>
         <source>Explosion</source>
-        <target>Explosion</target>
+        <target>Pulvérisé un peu partout</target>
       </segment>
     </unit>
     <unit id="oDsiHGx" name="???">
